--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
         <h2>Contato</h2>
         <div class="card">
-            <p>Email: seuemail@email.com</p>
-            <p>GitHub: github.com/seuusuario</p>
+            <p>Email: <span class="email">lfmouts@gmail.com</span></p>
+            <p>GitHub: github.com/skyparte1</p>
         </div>
     </div>
 </body>
