--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
             <p>GitHub: github.com/skyparte1</p>
         </div>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
