--- a/index.html
+++ b/index.html
@@ -2,41 +2,41 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Luis Fernando - Desenvolvedor Web</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <title>Luis Fernando | Desenvolvedor Web</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Luis Fernando</h1>
-        <p>Desenvolvedor web focado em transformar layouts em sistemas funcionais.</p>
 
-        <h2>Tecnologias</h2>
-        <div class="card">
-            HTML • CSS • JavaScript • PHP • MySQL
-        </div>
+<section class="hero">
+    <h1>Luis Fernando</h1>
+    <h2>Desenvolvedor Web Full Stack</h2>
+    <p>Crio sites e sistemas modernos, rápidos e funcionais.</p>
+    <div class="buttons">
+        <a href="#projetos" class="btn primary">Ver Projetos</a>
+        <a href="#contato" class="btn secondary">Contato</a>
+    </div>
+</section>
 
-        <h2>Projetos</h2>
-
+<section id="projetos" class="projetos">
+    <h2>Projetos</h2>
+    <div class="cards">
         <div class="card">
             <h3>Sistema de Login</h3>
-            <p>Sistema com cadastro, login e painel protegido.</p>
-            <p><strong>Tecnologias:</strong> HTML, CSS, JavaScript, PHP e MySQL</p>
+            <p>Login completo com PHP e MySQL.</p>
         </div>
-
         <div class="card">
-            <h3>Sistema de Tarefas</h3>
-            <p>Sistema com login e CRUD completo.</p>
-            <p><strong>Tecnologias:</strong> HTML, CSS, JavaScript, PHP e MySQL</p>
-        </div>
-
-        <h2>Contato</h2>
-        <div class="card">
-            <p>Email: <span class="email">lfmouts@gmail.com</span></p>
-            <p>GitHub: github.com/skyparte1</p>
+            <h3>Landing Page Responsiva</h3>
+            <p>Site moderno feito com HTML, CSS e JS.</p>
         </div>
     </div>
-    <script src="js/script.js"></script>
+</section>
+
+<section id="contato" class="contato">
+    <h2>Contato</h2>
+    <p>Email: lfmouts@gmail.com</p>
+    <p>GitHub: github.com/skyparte1</p>
+</section>
+
 </body>
 </html>
