Atualização no visual da landing page

--- a/index.html
+++ b/index.html
@@ -1,42 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Luis Fernando | Desenvolvedor Web</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="logo">LF</div>
+      <div class="links">
+        <a href="#projetos">Projetos</a>
+        <a href="#contato">Contato</a>
+      </div>
+    </nav>
 
-<section class="hero">
-    <h1>Luis Fernando</h1>
-    <h2>Desenvolvedor Web Full Stack</h2>
-    <p>Crio sites e sistemas modernos, rápidos e funcionais.</p>
-    <div class="buttons">
+    <section class="hero">
+      <h1>Luis Fernando</h1>
+      <h2>Desenvolvedor Web Full Stack</h2>
+      <p>Crio sites e sistemas modernos, rápidos e funcionais.</p>
+      <div class="buttons">
         <a href="#projetos" class="btn primary">Ver Projetos</a>
         <a href="#contato" class="btn secondary">Contato</a>
-    </div>
-</section>
+      </div>
+    </section>
 
-<section id="projetos" class="projetos">
-    <h2>Projetos</h2>
-    <div class="cards">
+    <section id="projetos" class="projetos">
+      <h2>Projetos</h2>
+      <div class="cards">
         <div class="card">
-            <h3>Sistema de Login</h3>
-            <p>Login completo com PHP e MySQL.</p>
+          <h3>Sistema de Login</h3>
+          <p>Login completo com PHP e MySQL.</p>
         </div>
         <div class="card">
-            <h3>Landing Page Responsiva</h3>
-            <p>Site moderno feito com HTML, CSS e JS.</p>
+          <h3>Landing Page Responsiva</h3>
+          <p>Site moderno feito com HTML, CSS e JS.</p>
         </div>
-    </div>
-</section>
+      </div>
+    </section>
 
-<section id="contato" class="contato">
-    <h2>Contato</h2>
-    <p>Email: lfmouts@gmail.com</p>
-    <p>GitHub: github.com/skyparte1</p>
-</section>
-
-</body>
+    <section id="contato" class="contato">
+      <h2>Contato</h2>
+      <p>Email: lfmouts@gmail.com</p>
+      <p>GitHub: github.com/skyparte1</p>
+    </section>
+  </body>
 </html>
