conexão do index ao js

--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
       <p>Email: lfmouts@gmail.com</p>
       <p>GitHub: github.com/skyparte1</p>
     </section>
+    <script src="js/script.js"></script>
   </body>
 </html>
